fix: リクエスト例の修正

--- a/画面要件/案件編集画面.md
+++ b/画面要件/案件編集画面.md
@@ -138,8 +138,8 @@ outsources } |array|◯|-|外注費|
         "projects_data":  {
             "name": "プロジェクトバランサー",
             "phase": 1,
-            "start_date": "2024-08-",
-            "end_date": "2024-08-",
+            "start_date": "2024-08-01",
+            "end_date": "2024-08-30",
         },
         "estimations": {
             "order_price": 300000000,
@@ -216,8 +216,8 @@ outsources } |array|外注費|
         "projects_data":  {
             "name": "プロジェクトバランサー",
             "phase": 1,
-            "start_date": "2024-08-",
-            "end_date": "2024-08-",
+            "start_date": "2024-08-01",
+            "end_date": "2025-08-30",
         },
         "estimations": {
             "order_price": 300000000,
