--- a/画面要件/案件編集画面.md
+++ b/画面要件/案件編集画面.md
@@ -10,7 +10,7 @@
 ### 1. 画面名
 
 画面名:案件編集画面
-Path: /projects/edit
+Path: /projects/edit/{id}
 
 ### 2. 画面概要
 
@@ -78,7 +78,7 @@ Path: /projects/edit
 API名|HTTPメソッド|URI|説明|
 -----|----|----|----|
 案件詳細|GET|/v1/projects/{id}|案件詳細情報を取得する|
-案件編集|POST|/v1/projects/{id}|案件情報をprojects,estimations,assignment_member_monthly_estimations,assignment_members,outsourcesに情報が編集される|
+案件編集|POST|/v1/projects/{id}|案件情報をprojects,estimations,assignment_member_monthly_estimations,assignment_members,outsourcesに編集する|
 
 ### 2. リクエスト仕様
 
