fix: 案件実績画面要件定義書の仕様変更に合わせて変更

--- a/画面要件/案件実績画面.md
+++ b/画面要件/案件実績画面.md
@@ -32,11 +32,6 @@ Path: /projectsAchievements/{id}
 案件選択|プルダウン|文字列|-|I/O|-|-|選択肢は全てのプロジェクト名/プルダウン選択時に文字入力で検索可能(フロント側で制御)/内部的にはproject_idで管理|
 対象期間 / 対象期間|テキスト|文字列|-|O|-|-|-|
 対象期間 / 期間|プルダウン|文字列|-|I|-|日毎|選択肢['日毎','週毎','月毎']|
-表示期間 / 表示期間|テキスト|文字列|-|O|-|-|-|
-表示期間 / 矢印|ボタン|-|-|I/O|-|-|-|
-表示期間 / 開始日|デイトピッカー|日付|-|I/O|-|-|フォーマット: YYYY/MM/DD/週毎の場合は週で選択するデイトピッカーにする/月毎の場合は月で選択するデイトピッカーにする|
-表示期間 / ~|テキスト|文字列|-|O|-|-|-|
-表示期間 / 終了日|デイトピッカー|日付|-|I/O|-|-|フォーマット: YYYY/MM/DD|
 案件実績|テーブル|-|-|I|-|-|-|
 案件実績 / 案件実績|テキスト|文字列|-|O|-|-|-|
 案件実績 / 名前(列名)|テキスト|文字列|-|O|-|-|-|
@@ -52,6 +47,11 @@ Path: /projectsAchievements/{id}
 案件実績 / 金額|テキスト|文字列|-|O|-|-|-|
 案件実績 / 金額(実績値)|テキスト|文字列|-|O|-|-|フォーマット: ¥ XXX,XXX/時間入力テキストボックスの入力完了後に原価(行)を用いて自動計算(原価(行)/160×時間入力テキストボックスの値)|
 登録|ボタン|-|-|I|-|-|-|
+<!-- 表示期間 / 表示期間|テキスト|文字列|-|O|-|-|-|
+表示期間 / 矢印|ボタン|-|-|I/O|-|-|-|
+表示期間 / 開始日|デイトピッカー|日付|-|I/O|-|-|フォーマット: YYYY/MM/DD/週毎の場合は週で選択するデイトピッカーにする/月毎の場合は月で選択するデイトピッカーにする|
+表示期間 / ~|テキスト|文字列|-|O|-|-|-|
+表示期間 / 終了日|デイトピッカー|日付|-|I/O|-|-|フォーマット: YYYY/MM/DD| -->
 
 ### 4. イベント
 
@@ -66,7 +66,7 @@ Path: /projectsAchievements/{id}
   - 選択されたプロジェクトの情報を表示
 - 対象期間の期間を変更する
   - 案件実績の内容を選択された期間に変更する(API取得している既存のデータで週毎/月毎のデータを作成)
-- 表示期間の矢印を押下する
+<!-- - 表示期間の矢印を押下する
   - 対象期間の期間が日毎の場合: 表示期間の開始日と最終日を次/前の週の値に変更する ※表示期間は一週間以下は選択できないものとする
   - 対象期間の期間が週毎の場合: 表示期間の開始日を最終日+1の値に変更の上、終了日を(最終日- 開始日)の期間分プラスして変更する ※表示期間は一週間以下は選択できないものとする
   - 対象期間の期間が週毎の場合: 表示期間の開始日を最終日+1の値に変更の上、終了日を(最終日- 開始日)の期間分プラスして変更する ※表示期間は一週間以下は選択できないものとする
@@ -74,9 +74,9 @@ Path: /projectsAchievements/{id}
 - 表示期間の開始日を変更する
   - 設定された開始日と終了日に合わせて案件実績取得APIにリクエストを送り、案件実績を再取得
 - 表示期間の終了日を変更する
-  - 設定された開始日と終了日に合わせて案件実績取得APIにリクエストを送り、案件実績を再取得
+  - 設定された開始日と終了日に合わせて案件実績取得APIにリクエストを送り、案件実績を再取得 -->
 - 案件実績の矢印を押下する
-  - 表示期間のみでコントロールにした方が楽じゃね？この矢印消そうよ
+  - 前の週の開始日と終了日に合わせて案件実績取得APIにリクエストを送り、案件実績を再取得
 - 案件実績の時間入力テキストボックスに時間を入力する
   - 金額の値を自動計算する
 - 登録するボタンを押下する
@@ -159,9 +159,20 @@ projects}|object|◯|-|-|
 
 ##### レスポンスフィールド
 
-フィールド名|型|備考|
+パラメータ名|型|備考|
 -----|----|----|
--|-|-|
+projects{|object|-|
+projects_id|int|-|
+assignment_members[|array|案件アサインメンバー|
+assignment_member_id|int|-|
+position|int|役職|
+work_costs[|array|原価|
+daily_cost|int|その日あたりの原価|
+work_time|int|その日のあたりの工数(時間)|
+work_date|date|-|
+work_costs]|array|-|
+assignment_members]|array|-|
+projects}|object|-|
 
 ##### レスポンス例
 
