--- a/画面要件/案件編集画面.md
+++ b/画面要件/案件編集画面.md
@@ -20,7 +20,7 @@ Path: /projects/edit/{id}
 
 レイアウト:
 
-![案件管理画面WF](案件編集画面WF_20240901.png)
+![案件管理画面WF](案件編集画面_20240914.png)
 
 項目:
 項目名|種別|型|必須|I/O|バリデーション|初期値|備考|
@@ -105,8 +105,9 @@ API名|HTTPメソッド|URI|説明|
 projects|array|◯|-|-|
 projects_data { |array|◯|-|案件情報|
 name|string|◯|-|案件名|
-phase|string|◯|-|作業フェーズ|
+phase|int|◯|-|作業フェーズ|
 freee_project_code|string|-|-|freeeプロジェクトID|
+contract|int|-|-|契約種別|
 start_date|date|◯|-|開始日|
 end_date|date|◯|-|終了日|
 projects_data } |array|◯|-|-|
@@ -138,6 +139,8 @@ outsources } |array|◯|-|外注費|
         "projects_data":  {
             "name": "プロジェクトバランサー",
             "phase": 1,
+            "freee_project_code": "1111-1111-1111",
+            "contract": 4,
             "start_date": "2024-08-01",
             "end_date": "2024-08-30",
         },
@@ -183,8 +186,9 @@ outsources } |array|◯|-|外注費|
 projects|array|-|
 projects_data { |array|案件情報|
 name|string|案件名|
-phase|string|作業フェーズ|
+phase|int|作業フェーズ|
 freee_project_code|string|-|-|freeeプロジェクトID|
+contract|int|-|-|契約種別|
 start_date|date|開始日|
 end_date|date|終了日|
 projects_data } |array|-|
@@ -216,6 +220,8 @@ outsources } |array|外注費|
         "projects_data":  {
             "name": "プロジェクトバランサー",
             "phase": 1,
+            "freee_project_code": "1111-1111-1111",
+            "contract": 4,
             "start_date": "2024-08-01",
             "end_date": "2025-08-30",
         },
