--- a/画面要件/案件登録画面.md
+++ b/画面要件/案件登録画面.md
@@ -87,8 +87,8 @@ API名|HTTPメソッド|URI|説明|
 -----|----|----|----|----|
 projects|array|◯|-|-|
 projects_data { |array|◯|-|案件情報|
-name|int|◯|-|案件名|
-phase|string|◯|-|作業フェーズ|
+name|string|◯|-|案件名|
+phase|int|◯|-|作業フェーズ|
 freee_project_code|string|-|-|freeeプロジェクトID|
 contract|int|-|-|契約種別|
 start_date|date|◯|-|開始日|
