--- a/画面要件/案件登録画面.md
+++ b/画面要件/案件登録画面.md
@@ -124,8 +124,8 @@ outsources } |array|◯|-|外注費|
             "phase": 1,
             "freee_project_code": "1111-1111-1111",
             "contract": 4,
-            "start_date": "2024-08-",
-            "end_date": "2024-08-",
+            "start_date": "2024-08-01",
+            "end_date": "2024-08-30",
         },
         "estimations": {
             "order_price": 300000000,
