doc: ホーム画面画面仕様書作成

--- a/画面要件/案件登録画面.md
+++ b/画面要件/案件登録画面.md
@@ -85,7 +85,7 @@ API名|HTTPメソッド|URI|説明|
 
 パラメータ名|型|必須/任意|デフォルト値|備考|
 -----|----|----|----|----|
-projects|array|◯|-|-|
+projects|object|◯|-|-|
 projects_data { |array|◯|-|案件情報|
 name|string|◯|-|案件名|
 phase|string|◯|-|作業フェーズ|
