fix: コメントのパスの修正

--- a/画面要件/ホーム画面.md
+++ b/画面要件/ホーム画面.md
@@ -131,10 +131,10 @@ Path: /home
 API名|HTTPメソッド|URI|説明|
 -----|----|----|----|
 ホーム画面情報取得|GET|/v1/home/{id}|ホーム画面に表示する情報をコメント以外取得する|
-コメント一覧取得|GET|/v1/comment|コメントの一覧を取得する|
-コメント登録|POST|/v1/comment|コメントの登録を行う|
-コメント編集|PUT|/v1/comment/{id}|コメントの編集を行う|
-コメント削除|DELETE|/v1/comment/{id}|コメントの削除を行う|
+コメント一覧取得|GET|/v1/projects/{id}/comments|コメントの一覧を取得する|
+コメント登録|POST|/v1/projects/{id}/comments|コメントの登録を行う|
+コメント編集|PUT|/v1/projects/{id}/comments/{id}|コメントの編集を行う|
+コメント削除|DELETE|/v1/projects/{id}/comments/{id}|コメントの削除を行う|
 
 ### 2. リクエスト仕様
 
