--- a/画面要件/案件編集画面.md
+++ b/画面要件/案件編集画面.md
@@ -104,10 +104,11 @@ API名|HTTPメソッド|URI|説明|
 -----|----|----|----|----|
 projects|array|◯|-|-|
 projects_data { |array|◯|-|案件情報|
+id|int|◯|-|プロジェクトid|
 name|string|◯|-|案件名|
 phase|int|◯|-|作業フェーズ|
 freee_project_code|string|-|-|freeeプロジェクトID|
-contract|int|-|-|契約種別|
+contract|int|◯|-|契約種別|
 start_date|date|◯|-|開始日|
 end_date|date|◯|-|終了日|
 projects_data } |array|◯|-|-|
@@ -137,6 +138,7 @@ outsources } |array|◯|-|外注費|
 {
     "projects":  {
         "projects_data":  {
+            "id": 1,
             "name": "プロジェクトバランサー",
             "phase": 1,
             "freee_project_code": "1111-1111-1111",
@@ -187,8 +189,8 @@ projects|array|-|
 projects_data { |array|案件情報|
 name|string|案件名|
 phase|int|作業フェーズ|
-freee_project_code|string|-|-|freeeプロジェクトID|
-contract|int|-|-|契約種別|
+freee_project_code|string|freeeプロジェクトID|
+contract|int|契約種別|
 start_date|date|開始日|
 end_date|date|終了日|
 projects_data } |array|-|
@@ -218,6 +220,7 @@ outsources } |array|外注費|
 {
     "projects":  {
         "projects_data":  {
+            "id": 1,
             "name": "プロジェクトバランサー",
             "phase": 1,
             "freee_project_code": "1111-1111-1111",
