fix: 必要項目を追加

--- a/画面要件/ホーム画面.md
+++ b/画面要件/ホーム画面.md
@@ -223,7 +223,7 @@ comment|文字列|◯|-|URIにidを含む|
  フィールド名 | 型 | 備考 |
  ------------ | ---- | ---- |
  projects | object | ---- |
- projects.id | integer | プロジェクトのID |
+ projects.id | int | プロジェクトのID |
  projects.freee_project_code | string | プロジェクトコード |
  projects.name | string | 案件名 |
  projects.start_date | string | プロジェクト開始日 |
@@ -254,6 +254,7 @@ comment|文字列|◯|-|URIにidを含む|
  projects.assignment_members.achievement_total_person_month | int | 積算工数 / 機能ロジック詳細の積算工数工数参照 |
  projects.assignment_members.achievement_total_cost | int | 積算原価 / 機能ロジック詳細の積算原価工数参照|
  projects.outsources | array | 外注 |
+ projects.outsources.id | int | アウトソースの一意のID |
  projects.outsources.name | string | 内容 |
  projects.outsources.estimate_cost | int | 外注見積原価 |
  projects.outsources.cost | int | 外注実績原価 |
@@ -311,6 +312,7 @@ comment|文字列|◯|-|URIにidを含む|
             ],
             "outsources": [
             {
+              "id": 1,
               "name": "デザイン外注",
               "estimate_cost": 400000,
               "cost": 300000,
@@ -430,7 +432,7 @@ updated_at| string | コメント更新日時|
 ##### レスポンス例
 
 ```json
-[]
+
 ```
 
 ##### エラーレスポンス
@@ -462,7 +464,7 @@ updated_at| string | コメント更新日時|
 ##### レスポンス例
 
 ```json
-[]
+
 ```
 
 ##### エラーレスポンス
