--- a/画面要件/案件実績画面.md
+++ b/画面要件/案件実績画面.md
@@ -115,9 +115,9 @@ API名|HTTPメソッド|URI|説明|
 パラメータ名|型|必須/任意|デフォルト値|備考|
 -----|----|----|----|----|
 projects{|object|◯|-|-|
-projects_id|int|◯|-|-|
+id|int|◯|-|-|
 assignment_members[|array|◯|-|案件アサインメンバー|
-assignment_member_id|int|◯|-|-|
+member_id|int|◯|-|-|
 position|int|◯|-|役職|
 work_costs[|array|◯|-|原価|
 daily_cost|int|◯|-|その日あたりの原価|
@@ -132,10 +132,10 @@ projects}|object|◯|-|-|
 ```json
 {
     "projects":  {
-        "projects_id": 1,
+        "id": 1,
         "assignment_members": [
           {
-            "assignment_member_id": 1,
+            "member_id": 1,
             "position": 1,
             "work_costs": [
               {
@@ -163,10 +163,11 @@ projects}|object|◯|-|-|
 パラメータ名|型|備考|
 -----|----|----|
 projects{|object|-|
-projects_id|int|-|
+id|int|-|
 assignment_members[|array|案件アサインメンバー|
-assignment_member_id|int|-|
+member_id|int|-|
 position|int|役職|
+base_cost|int|原価|
 work_costs[|array|原価|
 daily_cost|int|その日あたりの原価|
 work_time|int|その日のあたりの工数(時間)|
@@ -180,11 +181,12 @@ projects}|object|-|
 ```json
 {
     "projects":  {
-        "projects_id": 1,
+        "id": 1,
         "assignment_members": [
           {
-            "assignment_member_id": 1,
+            "member_id": 1,
             "position": 1,
+            "base_cost": 800000,
             "work_costs": [
               {
                 "daily_cost": 40000,
