--- a/画面要件/案件編集画面.md
+++ b/画面要件/案件編集画面.md
@@ -23,6 +23,7 @@ Path: /projects/edit/{id}
 ![案件管理画面WF](案件編集画面_20240914.png)
 
 項目:
+
 項目名|種別|型|必須|I/O|バリデーション|初期値|備考|
 -----|----|----|----|----|----|----|----|
 案件情報登録|テーブル|-|-|I|-|-|-|
@@ -207,6 +208,7 @@ estimate_person_month|int|工数|
 assignment_member_monthly_estimations } |array|メンバー毎見積工数|
 assignment_members } |array|メンバー|
 outsources { |array|外注費|
+id|int|アウトソースの一意のID|
 name|string|内容|
 estimate_cost|int|見積金額|
 cost|int|原価|
@@ -233,6 +235,7 @@ outsources } |array|外注費|
         "assignment_members": [{
             "member_id": 1,
             "position": 1,
+            "base_cost": 800000,
             "estaimate_total_person_month": 6,
             "assignment_member_monthly_estimations": [{
                 "target_month": 5,
@@ -244,6 +247,7 @@ outsources } |array|外注費|
         ...,
         ],
         "outsources": [{
+            "id": 1,
             "name": "デザイン外注",
             "estimate_cost": 400000,
             "cost": 300000,
@@ -309,4 +313,4 @@ outsources } |array|外注費|
 
 ### 4. 備考
 
-備考: 
+備考:
