fix: target_monthの形式を修正

--- a/画面要件/案件編集画面.md
+++ b/画面要件/案件編集画面.md
@@ -155,7 +155,7 @@ outsources } |array|◯|-|外注費|
             "position": 1,
             "estaimate_total_person_month": 6,
             "assignment_member_monthly_estimations": [{
-                "target_month": 5,
+                "target_month": "2024/06",
                 "estimate_person_month": 1.0,
             }
             ...,
