fix: work_timeの修正

--- a/画面要件/案件実績画面.md
+++ b/画面要件/案件実績画面.md
@@ -190,7 +190,7 @@ projects}|object|-|
             "work_costs": [
               {
                 "daily_cost": 40000,
-                "work_time": 8,
+                "work_time": "08:00:00",
                 "work_date": "2024/09/02",
               },
               ...,
