fix: 案件登録/編集のリクエスト&レスポンス修正

--- a/画面要件/案件編集画面.md
+++ b/画面要件/案件編集画面.md
@@ -155,7 +155,10 @@ outsources } |array|◯|-|外注費|
             "position": 1,
             "estaimate_total_person_month": 6,
             "assignment_member_monthly_estimations": [{
+                "id": 1,
+                "assignment_member_id": 1,
                 "target_month": "2024/06",
+                "estimate_cost": 200000,
                 "estimate_person_month": 1.0,
             }
             ...,
@@ -203,7 +206,9 @@ member_id|int|メンバーID|
 position|int|役職|
 estaimate_total_person_month|int|見積総工数|
 assignment_member_monthly_estimations { |array|メンバー毎見積工数|
+id|int|assignment_member_monthly_estimationsのid|
 target_month|int|該当月|
+estimate_cost|int|見積原価|
 estimate_person_month|int|工数|
 assignment_member_monthly_estimations } |array|メンバー毎見積工数|
 assignment_members } |array|メンバー|
@@ -238,7 +243,9 @@ outsources } |array|外注費|
             "base_cost": 800000,
             "estaimate_total_person_month": 6,
             "assignment_member_monthly_estimations": [{
-                "target_month": 5,
+                "id": 1,
+                "target_month": "2024/06",
+                "estimate_cost": 200000,
                 "estimate_person_month": 1.0,
             }
             ...,
