--- a/画面要件/案件登録画面.md
+++ b/画面要件/案件登録画面.md
@@ -106,6 +106,7 @@ estaimate_total_person_month|int|◯|-|見積総工数|
 assignment_members } |array|◯|-|メンバー|
 assignment_member_monthly_estimations { |array|◯|-|メンバー毎見積工数|
 target_month|int|◯|-|該当月|
+estimate_cost|int|◯|-|見積原価|
 estimate_person_month|int|◯|-|工数|
 assignment_member_monthly_estimations } |array|◯|-|メンバー毎見積工数|
 outsources { |array|◯|-|外注費|
@@ -138,6 +139,7 @@ outsources } |array|◯|-|外注費|
             "estaimate_total_person_month": 6,
             "assignment_member_monthly_estimations": [{
                 "target_month": "2024/05",
+                "estimate_cost": 200000,
                 "estimate_person_month": 1.0,
             }
             ...,
